--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Tudo sobre Google Glass</title>
 <link rel="stylesheet" type="text/css" href="_css/estilo.css"/>
 </head>
+<script language="javascript" src="_javascript/funcoes.js"></script>
 
 <body> 
 
@@ -22,18 +23,18 @@
 <nav id="menu">
 <h1>Menu Principal</h1>
 	<ul type="disc">
-	<li><a href=index.html">Home</a></li>
-	<li><a href="specs.html">Especificações</a></li>
-	<li><a href="fotos.html">Fotos</a></li>
-	<li><a href="multimidia.html">Multimídia</a></li>
-	<li><a href="fale-conosco.html">Fale conosco</a></li>
+	<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href=index.html">Home</a></li>
+	<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="specs.html">Especificações</a></li>
+	<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+	<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="multimidia.html">Multimídia</a></li>
+	<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">Fale conosco</a></li>
 	</ul>
 </nav>
 </header>
 
 <section id="corpo">
 
-<article id="noticia-principal">
+
 <header id="cabecalho-artigo">
 <hgroup> 
 <h3>Tecnologia > Inovações</h3>
@@ -42,7 +43,7 @@
 <h3 class="direita">Atualizado em 23/Abril/2013</h3>
 </hgroup>
 </header>
-
+<article id="noticia-principal">
 <h2>O que é</h2>
 <p>O <span style="text-decoration: underline;">Google Glass</span> é um acessório em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de <a href="http://glass.google.com" target="_blank">Project Glass</a>, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar víde&shy;ocon&shy;ferên&shy;cias. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o <em>Google Glass</em> encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 
@@ -80,6 +81,7 @@
 [AQUI ENTRA UM VÍDEO]
 </article>
 </section>
+
 <aside id="lateral">
 
 <h1>Outras Notícias</h1>
@@ -91,7 +93,6 @@
 <p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
 <p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
- 
  </aside>
  
  <footer id="rodape">
